--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "husky install",
+    "prepare": "husky install",
     "lint": "eslint ."
   },
   "eslintConfig": {
